# rusty-journal

./: Cargo.toml  README.md
src/: cli.rs  main.rs  task.rs
