[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
structopt = "0.3.23"
serde_json = "1.0.67" 
anyhow = "1.0"

[dependencies.serde]
version ="1.0.130"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

